--- a/index.html
+++ b/index.html
@@ -14,25 +14,42 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" />
   <!-- font awesome -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" />
+  
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"></script>
 </head>
 
 <body>
   <!-- trang chính -->
   <div id="main">
     <div id="header">
-      <!-- site id là sologan hoặc logo -->
-      <div class="siteID">TIME TABLE</div>
-      <!-- dong ho cap nhat -->
-      <div id="digital-clock"></div>
-      <!-- thanh nav -->
-      <div id="category-menu">
-        <ul>
-          <li><a href="#">TRANG CHỦ</a></li>
-          <li><a href="./content/classlist.html">DANH SÁCH LỚP HỌC PHẦN</a></li>
-          <li><a href="./content/timetable.html">LỊCH HỌC</a></li>
-          <li><a href="./content/finalexam.html">LỊCH THI</a></li>
-          <li><a href="">ABOUT US</a></li>
-        </ul>
+        <nav class="navbar navbar-expand-lg" style="background-color: #dbf0ff;">
+          <div class="container-fluid">
+              <img src="https://ibb.co/bWPVn3w" alt="">
+              <a class="nav-link navbar-brand " href="#">TRANG CHỦ</a>
+              <div id="digital-clock" class="navbar-brand"></div>
+              
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText"
+                  aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+                  <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse" id="navbarText">
+                  <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                      <li class="nav-item">
+                          <a class="nav-link" aria-current="page" href="./content/classlist/classlist.html">DANH SÁCH LỚP HỌC PHẦN</a>
+                      </li>
+                      <li class="nav-item">
+                          <a class="nav-link" href="#">LỊCH HỌC</a>
+                      </li>
+                      <li class="nav-item">
+                          <a class="nav-link" href="#">LỊCH THI</a>
+                      </li>
+                      <li class="nav-item">
+                          <a class="nav-link" href="#">ABOUT US</a>
+                      </li>
+                  </ul>
+              </div>
+          </div>
+      </nav>
       </div>
       <!-- noi dung -->
     </div>
@@ -175,7 +192,7 @@
 
 <!-- javascript -->
 <script src="./main.js"></script>
-
+<script src="./jquery-3.2.1.min.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
 
