--- a/content/classlist/classlist.html
+++ b/content/classlist/classlist.html
@@ -10,7 +10,7 @@
     </style>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://getbootstrap.com/docs/5.2/assets/css/docs.css" rel="stylesheet">
-
+    <link rel="stylesheet" href="./classlist.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css"
         integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="stylesheet" href="../../assets/css/style.css">
@@ -26,33 +26,33 @@
           <div class="container-fluid">
               <!-- <img src="https://ibb.co/bWPVn3w" alt=""> -->
               <a class="navbar-brand" href="#">TRANG CHỦ</a>
-              <div id="digital-clock" class="navbar-brand"></div>
               
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText"
-                  aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
-                  <span class="navbar-toggler-icon"></span>
-              </button>
-              <div class="collapse navbar-collapse" id="navbarText">
-                  <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                      <li class="nav-item">
-                          <a class="nav-link" aria-current="page" href="./content/classlist/classlist.html">DANH SÁCH LỚP HỌC PHẦN</a>
+              aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarText">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                    <li class="nav-item">
+                        <a class="nav-link" aria-current="page" href="./content/classlist/classlist.html">DANH SÁCH LỚP HỌC PHẦN</a>
                       </li>
                       <li class="nav-item">
                           <a class="nav-link" href="#">LỊCH HỌC</a>
-                      </li>
-                      <li class="nav-item">
-                          <a class="nav-link" href="#">LỊCH THI</a>
-                      </li>
-                      <li class="nav-item">
-                          <a class="nav-link" href="#">ABOUT US</a>
-                      </li>
-                  </ul>
-              </div>
-          </div>
-      </nav>
-      </div>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">LỊCH THI</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">ABOUT US</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+    </div>
+    <div id="digital-clock" class="navbar-brand"></div>
     
-    <div class="content col-md-5" style="margin-top:50px; padding: 20px; width:100%">
+    <div class="content col-md-5" style="margin-top:50px; padding: 20px; width:100%">   
         <nav style="--bs-breadcrumb-divider: url(&#34;data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='8' height='8'%3E%3Cpath d='M2.5 0L1 1.5 3.5 4 1 6.5 2.5 8l4-4-4-4z' fill='%236c757d'/%3E%3C/svg%3E&#34;);"
             aria-label="breadcrumb">
             <ol class="breadcrumb">
@@ -108,7 +108,7 @@
                 </div>
             </div>
             <div>
-                <table class="table table-striped">
+                <table class="table container table-striped">
                     <thead>
                         <th>TT</th>
                         <th style="width:2cm;"></th>
