--- a/content/timetable/timetable.html
+++ b/content/timetable/timetable.html
@@ -2,15 +2,66 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>web</title>
-    <link rel="stylesheet" href="index.css">
+    <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>TIMETABLE</title>
+
+  <link rel="stylesheet" href="./timetable.css" />
+  <!-- logo -->
+  <link rel="icon" href="./assets/img/logo_timetable.png" type="image/x-icon" />
+  <!-- bootstrap -->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" />
+  <!-- font awesome -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" />
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"></script>
 </head>
 
 <body>
-    <img src="./photo-1549880338-65ddcdfd017b.jfif" alt="">
+    <div id="header">
+        <nav class="navbar navbar-expand-lg" style="background-color: #dbf0ff;">
+          <div class="container-fluid">
+  
+            <a class=" navbar-brand logo " href="./index.html">
+              <img
+                src="https://scontent.fhan1-1.fna.fbcdn.net/v/t39.30808-6/253661980_4334874469968763_6861397363581584707_n.png?_nc_cat=1&ccb=1-7&_nc_sid=09cbfe&_nc_ohc=6Qz_KDuYZVAAX8ODBJv&_nc_ht=scontent.fhan1-1.fna&oh=00_AT92yrrWnBwPjWPf3CDOBSy6nXuqF3cEvNT3vljEkVpP8Q&oe=63484F2D"
+                alt="">
+            </a>
+            <a class="nav-link navbar-brand " href="#">TRANG CHỦ</a>
+  
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText"
+              aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarText">
+              <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                <li class="nav-item">
+                  <a class="nav-link" aria-current="page" href="./content/classlist/classlist.html">DANH SÁCH LỚP HỌC
+                    PHẦN</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="">LỊCH HỌC</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#">LỊCH THI</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#">ABOUT US</a>
+                </li>
+              </ul>
+            </div>
+          </div>
+        </nav>
+      </div>
+
+    <div class="content">
+    
+    </div>
+
+
+
+    <im src="./photo-1549880338-65ddcdfd017b.jfif" alt="">
     <hr style="margin-bottom:50px ;">
     <h1>TIME TABLE</h1>
     <div class="container">
