--- a/index.html
+++ b/index.html
@@ -14,95 +14,74 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" />
   <!-- font awesome -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" />
-  
+
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"></script>
 </head>
 
 <body>
   <!-- trang chính -->
   <div id="main">
+    <!-- navigation -->
     <div id="header">
-        <nav class="navbar navbar-expand-lg" style="background-color: #dbf0ff;">
-          <div class="container-fluid">
-              <img src="https://ibb.co/bWPVn3w" alt="">
-              <a class="nav-link navbar-brand " href="#">TRANG CHỦ</a>
-              <div id="digital-clock" class="navbar-brand"></div>
-              
-              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText"
-                  aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
-                  <span class="navbar-toggler-icon"></span>
-              </button>
-              <div class="collapse navbar-collapse" id="navbarText">
-                  <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                      <li class="nav-item">
-                          <a class="nav-link" aria-current="page" href="./content/classlist/classlist.html">DANH SÁCH LỚP HỌC PHẦN</a>
-                      </li>
-                      <li class="nav-item">
-                          <a class="nav-link" href="#">LỊCH HỌC</a>
-                      </li>
-                      <li class="nav-item">
-                          <a class="nav-link" href="#">LỊCH THI</a>
-                      </li>
-                      <li class="nav-item">
-                          <a class="nav-link" href="#">ABOUT US</a>
-                      </li>
-                  </ul>
-              </div>
+      <nav class="navbar navbar-expand-lg" style="background-color: #dbf0ff;">
+        <div class="container-fluid">
+
+          <a class=" navbar-brand logo " href="./index.html">
+            <img
+              src="https://scontent.fhan1-1.fna.fbcdn.net/v/t39.30808-6/253661980_4334874469968763_6861397363581584707_n.png?_nc_cat=1&ccb=1-7&_nc_sid=09cbfe&_nc_ohc=6Qz_KDuYZVAAX8ODBJv&_nc_ht=scontent.fhan1-1.fna&oh=00_AT92yrrWnBwPjWPf3CDOBSy6nXuqF3cEvNT3vljEkVpP8Q&oe=63484F2D"
+              alt="">
+          </a>
+          <a class="nav-link navbar-brand " href="#">TRANG CHỦ</a>
+
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText"
+            aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarText">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+              <li class="nav-item">
+                <a class="nav-link" aria-current="page" href="./content/classlist/classlist.html">DANH SÁCH LỚP HỌC
+                  PHẦN</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">LỊCH HỌC</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">LỊCH THI</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">ABOUT US</a>
+              </li>
+            </ul>
           </div>
+        </div>
       </nav>
-      </div>
-      <!-- noi dung -->
     </div>
+    <!-- noi dung -->
     <div id="content-homepage">
-      <!-- slider -->
-
-      <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="false">
-        <div class="carousel-indicators">
-          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
-          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
-        </div>
-        <div class="carousel-inner">
-          <div class="carousel-item active">
-            <img src="./assets/img/slider/1.jpg" class="d-block w-100" alt="...">
-            <div class="carousel-caption d-none d-md-block">
-              <h5>First slide label</h5>
-              <p>Some representative placeholder content for the first slide.</p>
-            </div>
-          </div>
-          <div class="carousel-item">
-            <img src="./assets/img/slider/2.jpg" class="d-block w-100" alt="...">
-            <div class="carousel-caption d-none d-md-block">
-              <h5>Second slide label</h5>
-              <p>Some representative placeholder content for the second slide.</p>
-            </div>
-          </div>
-          <div class="carousel-item">
-            <img src="./assets/img/slider/3.jpg" class="d-block w-100" alt="...">
-            <div class="carousel-caption d-none d-md-block">
-              <h5>Third slide label</h5>
-              <p>Some representative placeholder content for the third slide.</p>
-            </div>
-          </div>
-        </div>
-        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
-          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">Previous</span>
+      <!-- greeting -->
+      <div class="greeting">
+        <button class="cta">
+          Khám phá <i class="fas fa-arrow-right"></i>
         </button>
-        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
-          <span class="carousel-control-next-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">Next</span>
-        </button>
+        <div id="digital-clock"></div>
+        <div class="greeting__title">chào ngày mới</div>
+        <div class="cube"></div>
+        <div class="cube"></div>
+        <div class="cube"></div>
+        <div class="cube"></div>
+        <div class="cube"></div>
+        <div class="cube"></div>
       </div>
-
       <!-- galery-view xem noi dung -->
       <div id="galery-view">
-        
+
         <div class="galery-wrapper">
 
           <h1 class="text-center mb-1 heading">CNTT3-K62</h1>
           <h4 class="text-center mb-3 sub-heading ">THIS ONE FOR YOU !!!</h4>
-          <p class="text-center mb-4 text-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio tempore facere obcaecati non pariatur nisi error illum unde quidem aspernatur? Commodi minus, maxime nam esse corporis nemo. Commodi, illo similique?</p>
+          <p class="text-center mb-4 text-description">Trang web này chúng tôi tạo ra nhằm mục đích cho các bạn sinh
+            viên lớp CNTT3-K62 theo dõi thời khoá biểu, lịch thi một cách dễ dàng nhất</p>
           <div class="container">
             <div class="row">
               <div class="col-md-4">
@@ -110,9 +89,7 @@
                   <img src="https://www.filmibeat.com/ph-big/2019/07/ismart-shankar_156195627930.jpg" />
                   <div class="card-body">
                     <h3>Danh sách lớp học phần</h3>
-                    <p class="text-justify">Nature writing often draws heavily on scientific information and facts about
-                      the natural world; at the same time, it is frequently written in the first person and incorporates
-                      personal observations of and philosophical reflections upon nature.</p>
+                    <p class="text-justify">Những lớp học bạn sẽ tham gia trong kì thứ 3 này</p>
                   </div>
                   <div class="card-footer">
                     <button type="button" class="btn btn-primary">View</button>
@@ -125,13 +102,10 @@
                     src="https://images.unsplash.com/photo-1541963463532-d68292c34b19?ixlib=rb-1.2.1&ixid=MXwxMjA3fDB8MHxleHBsb3JlLWZlZWR8M3x8fGVufDB8fHw%3D&w=1000&q=80" />
                   <div class="card-body">
                     <h3>lịch học </h3>
-                    <p class="text-justify">It is a long established fact that a reader will be distracted by the
-                      readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it
-                      has a more-or-less normal distribution of letters, as opposed to using 'Content here, content
-                      here', making it look like readable English.</p>
+                    <p class="text-justify">lịch học chi tiết từng tuần, sắp xếp theo những tháng riêng biệt</p>
                   </div>
                   <div class="card-footer">
-                    <button type="button" class="btn btn-primary">View</button>
+                    <button type="button" class="btn btn-primary">Xem</button>
                   </div>
                 </div>
               </div>
@@ -140,9 +114,7 @@
                   <img src="http://c.files.bbci.co.uk/C870/production/_112921315_gettyimages-876284806.jpg" />
                   <div class="card-body">
                     <h3>lịch thi</h3>
-                    <p class="text-justify">Lorem Ipsum is simply dummy text of the printing and typesetting industry.
-                      Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown
-                      printer took a galley of type and scrambled it to make a type specimen book.</p>
+                    <p class="text-justify">Lịch thi bạn phải tham gia để qua môn</p>
                   </div>
                   <div class="card-footer">
                     <button type="button" class="btn btn-primary">View</button>
@@ -153,11 +125,105 @@
           </div>
         </div>
 
-
-
       </div>
-      <!-- message -->
-      <div class="toast-message" id="greating">Have a good day !!!</div>
+
+      <!-- contact -->
+      <section class="contact mb-4">
+
+        <!--Section heading-->
+        <h2 class="h1-responsive font-weight-bold text-center my-4">Contact us</h2>
+        <!--Section description-->
+        <p class="text-center w-responsive mx-auto mb-5">Do you have any questions? Please do not hesitate to contact us
+          directly. Our team will come back to you within
+          a matter of hours to help you.</p>
+
+        <div class="row">
+
+          <!--Grid column-->
+          <div class="col-md-9 mb-md-0 mb-5">
+            <form id="contact-form" name="contact-form" action="mail.php" method="POST">
+
+              <!--Grid row-->
+              <div class="row">
+
+                <!--Grid column-->
+                <div class="col-md-6">
+                  <div class="md-form mb-0">
+                    <label for="name" class="">Your name</label>
+                    <input type="text" id="name" name="name" class="form-control">
+                  </div>
+                </div>
+                <!--Grid column-->
+
+                <!--Grid column-->
+                <div class="col-md-6">
+                  <div class="md-form mb-0">
+                    <label for="email" class="">Your email</label>
+                    <input type="text" id="email" name="email" class="form-control">
+                  </div>
+                </div>
+                <!--Grid column-->
+
+              </div>
+              <!--Grid row-->
+
+              <!--Grid row-->
+              <div class="row">
+                <div class="col-md-12">
+                  <div class="md-form mb-0">
+                    <label for="subject" class="">Subject</label>
+                    <input type="text" id="subject" name="subject" class="form-control">
+                  </div>
+                </div>
+              </div>
+              <!--Grid row-->
+
+              <!--Grid row-->
+              <div class="row">
+
+                <!--Grid column-->
+                <div class="col-md-12">
+
+                  <div class="md-form">
+                    <label for="message">Your message</label>
+                    <textarea type="text" id="message" name="message" rows="2"
+                      class="form-control md-textarea"></textarea>
+                  </div>
+
+                </div>
+              </div>
+              <!--Grid row-->
+
+            </form>
+
+            <div class="text-center text-md-left">
+              <a class="btn btn-primary btn-submit" onclick="document.getElementById('contact-form').submit();">Send</a>
+            </div>
+            <div class="status"></div>
+          </div>
+          <!--Grid column-->
+
+          <!--Grid column-->
+          <div class="col-md-3 text-center">
+            <ul class="list-unstyled mb-0">
+              <li><i class="fas fa-map-marker-alt fa-2x"></i>
+                <p>San Francisco, CA 94126, USA</p>
+              </li>
+
+              <li><i class="fas fa-phone mt-4 fa-2x"></i>
+                <p>+ 01 234 567 89</p>
+              </li>
+
+              <li><i class="fas fa-envelope mt-4 fa-2x"></i>
+                <p>contact@mdbootstrap.com</p>
+              </li>
+            </ul>
+          </div>
+          <!--Grid column-->
+
+        </div>
+
+      </section>
 
       <!-- footer chan trang -->
       <div class="footer">
@@ -178,18 +244,20 @@
         </footer>
       </div>
 
+
       <!-- thong tin -->
       <!-- <div class="scroller">
-        <marquee loop
-          >đây là trang web xem thời khoá biểu của lớp CNTT3-K62 trường đại học
-          giao thông vận tải hà nội. Thực hiện bởi Đặng Minh Hà, Nguyễn Hồng
-          Sơn, Chu Ngọc Anh và Hoàng Văn Hùng. xem thêm thông tin chi tiết tại
-          đây
-        </marquee>
-      </div> -->
+          <marquee loop
+            >đây là trang web xem thời khoá biểu của lớp CNTT3-K62 trường đại học
+            giao thông vận tải hà nội. Thực hiện bởi Đặng Minh Hà, Nguyễn Hồng
+            Sơn, Chu Ngọc Anh và Hoàng Văn Hùng. xem thêm thông tin chi tiết tại
+            đây
+          </marquee>
+        </div> -->
     </div>
-</body>
+  </div>
 
+</body>
 <!-- javascript -->
 <script src="./main.js"></script>
 <script src="./jquery-3.2.1.min.js"></script>
