--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
               src="https://scontent.fhan1-1.fna.fbcdn.net/v/t39.30808-6/253661980_4334874469968763_6861397363581584707_n.png?_nc_cat=1&ccb=1-7&_nc_sid=09cbfe&_nc_ohc=6Qz_KDuYZVAAX8ODBJv&_nc_ht=scontent.fhan1-1.fna&oh=00_AT92yrrWnBwPjWPf3CDOBSy6nXuqF3cEvNT3vljEkVpP8Q&oe=63484F2D"
               alt="">
           </a>
-          <a class="nav-link navbar-brand " href="#">TRANG CHỦ</a>
+          <a class="navbar-brand" href="#">TRANG CHỦ</a>
 
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText"
             aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
@@ -40,14 +40,13 @@
           <div class="collapse navbar-collapse" id="navbarText">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link" aria-current="page" href="./content/classlist/classlist.html">DANH SÁCH LỚP HỌC
-                  PHẦN</a>
+                <a class="nav-link" aria-current="page" href="./content/classlist/classlist.html">DANH SÁCH LỚP HỌC PHẦN</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">LỊCH HỌC</a>
+                <a class="nav-link" href="./content/timetable/timetable.html">LỊCH HỌC</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">LỊCH THI</a>
+                <a class="nav-link" href="./content/finalexam/finalexam.html">LỊCH THI</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="#">ABOUT US</a>
@@ -263,5 +262,5 @@
 <script src="./jquery-3.2.1.min.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
-
+<script type="text/javascript" src="https://cdn.fchat.vn/assets/embed/webchat.js?id=634627a46e04ae604e62e9a5" async="async"></script>
 </html>
