--- a/content/classlist/classlist.html
+++ b/content/classlist/classlist.html
@@ -25,7 +25,7 @@
         <nav class="navbar navbar-expand-lg" style="background-color: #dbf0ff;">
           <div class="container-fluid">
               <!-- <img src="https://ibb.co/bWPVn3w" alt=""> -->
-              <a class="navbar-brand" href="#">TRANG CHỦ</a>
+              <a class="navbar-brand" href="../../index.html">TRANG CHỦ</a>
               
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText"
               aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
@@ -34,13 +34,13 @@
             <div class="collapse navbar-collapse" id="navbarText">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link" aria-current="page" href="./content/classlist/classlist.html">DANH SÁCH LỚP HỌC PHẦN</a>
+                        <a class="nav-link" aria-current="page" href="../classlist/classlist.html">DANH SÁCH LỚP HỌC PHẦN</a>
                       </li>
                       <li class="nav-item">
-                          <a class="nav-link" href="#">LỊCH HỌC</a>
+                          <a class="nav-link" href="../timetable/timetable.html">LỊCH HỌC</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">LỊCH THI</a>
+                            <a class="nav-link" href="../finalexam/finalexam.html">LỊCH THI</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#">ABOUT US</a>
@@ -184,6 +184,8 @@
     </div>
     <script src="../../jquery-3.2.1.min.js"></script>
     <script src="../../main.js"> </script>
+    <script type="text/javascript" src="https://cdn.fchat.vn/assets/embed/webchat.js?id=634627a46e04ae604e62e9a5" async="async"></script>
+    <script type="text/javascript" src="https://cdn.fchat.vn/assets/embed/webchat.js?id=634627a46e04ae604e62e9a5" async="async"></script>
 </body>
 
 </html>
